--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,29 @@
-version: "3.5"
+version: '3.5'
 services:
+  apiPost:
+    image: ggmartinez/laravel:php-82
+    container_name: apiPost-container
+    volumes:
+       - "./:/app"
+    ports:
+      - "8000:8000"
+
+  autenticacion:
+    image: ggmartinez/laravel:php-82
+    container_name: autenticacion-container
+    volumes:
+       - "./:/app"
+    ports:
+       - "8001:8001"
+
+  backoffice:
+    image: ggmartinez/laravel:php-82
+    container_name: backoffice-container
+    volumes:
+       - "./:/app"
+    ports:
+       - "8002:8002"
+
   mysql:
     image: mysql
     container_name: mysql_db
@@ -7,18 +31,6 @@ services:
       - MYSQL_ROOT_PASSWORD=root 
       - MYSQL_DATABASE=tecnobyte_db
     volumes:
-      - "./mysql:/var/lib/mysql"
+       - "./mysql:/var/lib/mysql"
     ports:
       - "3306:3306"
- 
-  api:
-    depends_on:  
-      - mysql
-    image: ggmartinez/laravel:php-82
-    container_name: autenticacion_api 
-    ports:
-      - "8000:8000"
-    volumes:
-      - "./:/app"
-
-  
