--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -14,7 +14,7 @@ jobs:
       mysql:
         image: mysql:8
         env:
-          MYSQL_DATABASE: laravel
+          MYSQL_DATABASE: astrotech
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
         ports:
           - 3306:3306
